# advent-of-code2018

./: .gitignore  README.md  advent-of-code2018.cabal  package.yaml  stack.yaml
app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day08.hs  Day09.hs
src/: MyLens.hs
test/: DocTest.hs
